<resources>
    <string name="app_name">Gestión Académica</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_career">New Career</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="careerCode">Career Code</string>
    <string name="careerName">Career Name</string>
    <string name="careerTitle">Career Title</string>
    <string name="save">Save</string>
    <string name="information">Information</string>
    <string name="courses">Courses</string>
    <string name="new_course">New Course</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courseCode">Course Code</string>
    <string name="courseName">Course Name</string>
    <string name="courseCredits">Course Credits</string>
    <string name="courseHours">Weekly Hours</string>
    <string name="courseCycleYear">Cycle Year</string>
    <string name="courseCycleNumber">Cycle Number</string>
    <string name="groups">Groups</string>
    <string name="cycleYear">Cycle Year</string>
    <string name="cycleNumber">Cycle Number</string>
    <string name="cycleStartDate">Start Date</string>
    <string name="cycleEndDate">End Date</string>
</resources>